fix: scope scrollbar-gutter to body

--- a/dash/src/app/scrollbar.css
+++ b/dash/src/app/scrollbar.css
@@ -111,7 +111,7 @@
 	height: 8px;
 }
 
-* {
+body {
 	--scrollbar-track: hsla(0, 0%, 4%, 0.25);
 	--scrollbar-thumb: #474747;
 	--scrollbar-thumb-radius: 0.75rem;
